# Hashcode2022

./: .gitignore  Makefile  README.md  pyproject.toml
src/base_practice/: io_ops.py  main.py
src/base_practice/entities/: entities.py
tests/: test_main.py
