[tool.poetry]
name = "base_practice"
version = "0.1.0"
description = "base_practice"
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
factory-boy = "^3.0.1"
flake8 = "^3.8.3"
ipdb = "*"
ipython = "*"
isort = "^5.5.3"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-icdiff = "^0.5"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
main = "base_practice.main:main"

[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
  "integration"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
